--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,76 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+<ion-header>
+  <div class="fundoHeader">
+
+
+
+    <ion-buttons slot="start">
+      <div id="buttonLogin">
+        <ion-button routerLink="/login"> <span id="textLogin"> LOGIN </span>
+          <ion-icon class="ion-activatable ripple-parent" style="color:#ffffff;" name="log-in"></ion-icon>
+        </ion-button>
+      </div>
+
+    </ion-buttons>
+    <h2>Página Inicial</h2>
+    <div class="menu">
+
+      <ion-buttons slot="start">
+        <ion-menu-button menu="menu-principal"></ion-menu-button>
+      </ion-buttons>
+    </div>
+  </div>
+
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+
+
+  <div class="fundoContent">
+
+
+
+    <div id="logo">
+      <img src="../assets/img/logo.png" alt="">
+    </div>
+    <div id="container">
+
+      <strong><br> Seeking Talents</strong>
+      <br><br>
+      <p> Bem Vindo(a) ao Seeking Talents, tá precisando de uma ajudinha pra se descobrir profissionalmente? A gente
+        está aqui pra isso!
+        Desenvolvemos esse aplicativo para te ajudar nesse momento tão importante da sua vida. Quer saber como? <br>
+        <br></p>
+
+      <ion-buttons>
+        <div id="buttonSaiba"><a target="_blank" rel="noopener noreferrer"
+            href="https://ionicframework.com/docs/components">
+            <ion-button class="ion-activatable ripple-parent"> <span id="textSaiba">Saiba mais </span></ion-button>
+          </a></div>
+      </ion-buttons>
+    </div>
+    <p>copyright © FaelProject 2020</p>
+    <br>
   </div>
+
+
+
+
+
+
 </ion-content>
+
+
+
+
+<!-- 
+  
+  <ion-footer class="footer">
+    <span id="desenvolvido">Desenvolvido por: Diego Amaro, Caio Henrique, Rafael Nascimento. </span> 
+    <br>
+    <br>
+
+    <span id="copyright">copyright © FaelProject 2020 </span>
+</ion-footer>
+
+-->
