--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,143 @@
-#container {
-  text-align: center;
+/*******************************  FONTES  *********************************/
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+/*******************************  FONTES  *********************************/
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
+* {
+  padding: 0;
   margin: 0;
 }
 
-#container a {
-  text-decoration: none;
+/************ MENU ********************
+
+  <ion-buttons slot="start">
+    <ion-menu-button menu="main-menu"></ion-menu-button>
+  </ion-buttons>
+
+********************************/
+.fundoHeader {
+  //background-color: #000080;
+  background-image: linear-gradient(150deg, #3a0968, #280057);
+  padding: 10%;
+
+  h2 {
+    font-family: "Bebas Neue", cursive;
+    color: #ffffff;
+    font-size: 20px;
+  }
+
+  #buttonLogin {
+    position: fixed;
+    right: 0;
+    margin-top: 8%;
+    margin-left: 40%;
+    background-image: linear-gradient(150deg, #5b237a, #3325ae);
+    border-radius: 5%;
+    border: 1px solid;
+    color: #ffffff;
+
+    #textLogin {
+      font-size: 14px;
+      color: #ffffff;
+      font-family: "Merriweather", serif;
+    }
+  }
 }
+
+.fundoContent {
+  background-image: linear-gradient(150deg, #5b237a, #3325ae);
+  display: table;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: white;
+  background-position: 30% 45%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+
+  #container {
+    text-align: center;
+    position: relative;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+  }
+
+  #container strong {
+    font-size: 30px;
+    line-height: 36px;
+    color: #ffffff;
+    font-family: "Merriweather", serif;
+  }
+
+  #container p {
+    font-size: 16px;
+    line-height: 16px;
+    color: #ffffff;
+    font-family: "Josefin Sans", sans-serif;
+  }
+
+  #container a {
+    text-decoration: none;
+    text-align: center;
+    color: white;
+  }
+
+  #logo {
+    position: relative;
+    padding-top: 5%;
+    margin-bottom: 23%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+  #buttonSaiba {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border: 1px solid;
+    color: #ffffff;
+    border-radius: 15px;
+    background-image: linear-gradient(150deg, #3a0968, #280057);
+
+    #textSaiba {
+      font-family: "Merriweather", serif;
+      color: #ffffff;
+    }
+  }
+}
+
+.footer {
+  display: inline;
+  margin-bottom: 5%;
+  background-color: #022542;
+  padding: 5px;
+  text-align: center;
+  position: relative;
+  font-family: "Londrina Solid", cursive;
+
+  #desenvolvido {
+    font-size: 16px;
+    color: #ffffff;
+  }
+  #copyright {
+    font-size: 14px;
+    color: #ffffff;
+  }
+}
+
+
+
+.menu {
+  margin-left: 5%;
+  margin-top: 0%;
+
+}
+
