--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,20 +5,18 @@
 
     <ion-buttons slot="start">
       <div id="buttonLogin">
-        <ion-button routerLink="/login"> <span id="textLogin"> LOGIN </span>
+        <ion-button routerLink="/login"> <span id="textLogin"> Login </span>
           <ion-icon class="ion-activatable ripple-parent" style="color:#ffffff;" name="log-in"></ion-icon>
         </ion-button>
       </div>
-
     </ion-buttons>
     <h2>Página Inicial</h2>
-    <div class="menu">
 
-      <ion-buttons slot="start">
+      <ion-buttons>
         <ion-menu-button menu="menu-principal"></ion-menu-button>
       </ion-buttons>
     </div>
-  </div>
+
 
 </ion-header>
 
@@ -49,7 +47,18 @@
           </a></div>
       </ion-buttons>
     </div>
-    <p>copyright © FaelProject 2020</p>
+      
+
+   
+    <h5> 
+      EQUIPE DE DESENVOLVEDORES:  <br><br>
+      Caio Henrique: Marketing <br>
+      Diego Amaro: Marketing e Designer <br>
+      Rafael Nascimento: Programador e Designer.
+    </h5>
+    <h6>
+      copyright © FaelProject 2020
+    </h6>
     <br>
   </div>
 
@@ -60,7 +69,61 @@
 
 </ion-content>
 
+<!-------------------------------------------------- Menu principal ---------------------------------------->
 
+
+
+<ion-menu menuId="menu-principal" contentId="main">
+  <ion-content>
+    <div class="menu-header-principal"></div>
+    <div class="header-content">
+
+
+      <img src="../assets/img/logo.png" alt="">
+
+
+      <ion-label>
+        <h2>Seeking Talents</h2>
+        <h4>Menu</h4>
+      </ion-label>
+    </div>
+
+    <div class="action-button"></div>
+    <ion-list class="menu-items" lines="none">
+
+      <ion-item>
+        <ion-buttons slot="start">
+          <ion-button routerLink="/home">
+            <ion-icon name="pie-chart-outline"> </ion-icon> Inicio
+          </ion-button>
+        </ion-buttons>
+
+      </ion-item>
+
+
+      <ion-item>
+        <ion-buttons slot="start">
+          <ion-button routerLink="/login">
+            <ion-icon name="browsers-outline"> </ion-icon> Fazer Login
+          </ion-button>
+        </ion-buttons>
+
+      </ion-item>
+
+      <ion-item class="active">
+        <ion-buttons slot="start">
+          <ion-button routerLink="/cadastro">
+            <ion-icon name="flash"></ion-icon> Cadastrar
+          </ion-button>
+        </ion-buttons>
+
+      </ion-item>
+
+    </ion-list>
+
+
+  </ion-content>
+</ion-menu>
 
 
 <!-- 
