--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <ion-app>
-
-
-
-  <!-------------------------------------------------- Menu usuário -------------------------------------
+  <!-------------------------------------------------- Menu usuário ------------------------------------->
   <ion-menu menuId="menu-usuarios" contentId="main">
     <ion-content>
       <div class="menu-header-bg"></div>
@@ -50,14 +47,6 @@
       </ion-list>
 
     </ion-content>
-  </ion-menu>-->
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title>Interlagos</ion-title>
-    </ion-toolbar>
-  </ion-header><ion-content padding></ion-content>
+  </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
