--- a/src/app/pages/login-usuario/login-usuario.page.html
+++ b/src/app/pages/login-usuario/login-usuario.page.html
@@ -4,10 +4,11 @@
 
     <div class="menu">
     <h2>Login</h2>
-    
+    <ion-menu-toggle>
       <ion-buttons slot="start">
         <ion-menu-button menu="menu-principal"></ion-menu-button>
       </ion-buttons>
+    </ion-menu-toggle>
     </div>
     <ion-buttons slot="start">
       <div id="buttonLogin">
