--- a/src/app/pages/form-usuario/form-usuario.page.html
+++ b/src/app/pages/form-usuario/form-usuario.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Criar conta</ion-title>
+    <ion-title>form-usuario</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<form #fc="ngForm" (ngSubmit)="onSubmit(fc)"> 
+<form #fc="ngForm" (ngSubmit)="onSubmit(fc)">
   <ion-item>
     <ion-label position="floating">Nome</ion-label>
     <ion-input type="text" name="nome" [(ngModel)]="usuario.nome" required></ion-input>
@@ -12,26 +12,27 @@
 
   <ion-item>
     <ion-label position="floating">E-mail</ion-label>
-    <ion-input type="text" name="email" [(ngModel)]="usuario.email" required></ion-input>
+    <ion-input type="text" name="email" [(ngModel)]="usuario.email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+      required></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating"> Senha</ion-label>
-    <ion-input type="text" name="pws" [(ngModel)]="usuario.pws" required></ion-input>
+    <ion-label position="floating">Senha</ion-label>
+    <ion-input type="password" name="pws" [(ngModel)]="usuario.pws" required minlength="6" #s="ngModel"></ion-input>
   </ion-item>
+  <ion-text color=danger *ngIf="(s.invalid && c.dirty)"> Senhas é muito curta! </ion-text>
 
   <ion-item>
-    <ion-label position="floating"> Confirmação de senha</ion-label>
-    <ion-input type="text" name="conf" [(ngModel)]="conf" required></ion-input>
+    <ion-label position="floating">Confirmação senha</ion-label>
+    <ion-input type="password" name="conf" [(ngModel)]="conf" required #c="ngModel"></ion-input>
   </ion-item>
+  <ion-text color=danger *ngIf="(s.value != c.value) && c.dirty"> Senhas diferentes </ion-text>
 
-  <ion-item>
-    <ion-button type="submit" color="primary">Salvar</ion-button>
-    <ion-button type="reset" color="primary">Cancelar</ion-button>
-</ion-item>  
-
+  <ion-item lines="none">
+    <ion-button type="submit" color="primary" [disabled]="fc.invalid || (s.value != c.value)">Salvar</ion-button>
+    <ion-button type="reset" color="danger">Cancelar</ion-button>
+  </ion-item>
 </form>
 
 <ion-content>
-
 </ion-content>
